<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/LayoutPADRE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LayoutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#341144"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Bienvenida"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="#345544"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/LayoutBodyDescripcion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#3455f4"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TitleDescripcion"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/Descripcion"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutBodyInstrucciones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#3455f4"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TitleInstrucciones"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_horizontal"
                        android:text="@string/Instrucciones"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutBodyZonaBotones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#2355f4"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/LayoutBodyBotonAbout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#2355f4"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Lanza actividad Explicita sin pasar parametros" />

                        <Button
                            android:id="@+id/BotonLanzarActividad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="6dp"
                            android:text="@string/BotonLanzaActivity" >
                        </Button>
                    </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:id="@+id/LayoutBodyBoton2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#2355f4"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Lanza actividad Implicita sin pasar parametros" />

                        <Button
                            android:id="@+id/BotonLanzarActividad2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="6dp"
                            android:focusable="true"
                            android:text="@string/BotonLanzaActivity2" >
                        </Button>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LayoutBodyZonaPass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#ffff00"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/LayoutBodyBotonPass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#2355f4"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Introduce Contraseña" />

                        <EditText
                            android:id="@+id/EditTextPass"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:hint="Introduce Contraseña"
                            android:inputType="textPassword" />

                        <Button
                            android:id="@+id/BotonPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="6dp"
                            android:text="Entrar" >
                        </Button>

                        <TextView
                            android:id="@+id/TextViewBadPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutFoot"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>